[gd_scene load_steps=3 format=3 uid="uid://b58g3bsd4e0pe"]

[ext_resource type="Script" path="res://menu/player_crete_gameSingle.gd" id="1_cycbl"]
[ext_resource type="Texture2D" uid="uid://d2vcapbnqv5rr" path="res://menu/flags/at.png" id="2_lxr3x"]

[node name="PlayerCreteGame" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 50)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 197.0
grow_horizontal = 2
size_flags_horizontal = 3
script = ExtResource("1_cycbl")

[node name="flag" type="TextureRect" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
texture = ExtResource("2_lxr3x")

[node name="NamePlayer" type="TextEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.7
theme_override_font_sizes/font_size = 42
placeholder_text = "Nazwa Gracza"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="easy" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "Easy"

[node name="Medium" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "Medium"

[node name="Hard" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "Hard"

[node name="Button" type="Button" parent="."]
modulate = Color(0.976471, 0, 0, 1)
self_modulate = Color(1, 0, 0, 1)
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "X"

[connection signal="mouse_entered" from="flag" to="." method="_on_flag_mouse_entered"]
[connection signal="mouse_exited" from="flag" to="." method="_on_flag_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
